# test-project

./: CMakeLists.txt  README
include/: application.hpp  thread_controller.hpp  ttai_socket_client.h
src/: application.cpp  main.cpp
